--- a/css/style_org.css
+++ b/css/style_org.css
@@ -48,6 +48,8 @@ aside {
   justify-content: center;
   font-size: 100px;
   color: #fff;
+  opacity: 1;
+  transition: opacity 2s;
 }
 
 /*# sourceMappingURL=style_org.css.map */
